@@ -1,3 +1,14 @@
+2014-06-05  Pratik Solanki  <psolanki@apple.com>
+
+        Remove unsused method _setAcceleratedImageDecoding
+        https://bugs.webkit.org/show_bug.cgi?id=133554
+
+        Reviewed by Jon Honeycutt.
+
+        * WebView/WebView.mm:
+        (+[WebView _setAcceleratedImageDecoding:]): Deleted.
+        * WebView/WebViewPrivate.h:
+
 2014-06-05  Benjamin Poulain  <bpoulain@apple.com>
 
         [iOS][WK2] Add device orientation
